Page d'accueil mise a jour v1

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <nav>
             <ul>
+                <li><a href="#accueil">Accueil</a></li>
                 <li><a href="#about">À propos</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Contact</a></li>
@@ -17,12 +18,19 @@
         </nav>
     </header>
 
+    <section id="accueil" class="hero">
+        <div class="hero-content">
+            <h1>Pierre THOMAS</h1>
+            <p>Développeur Web Junior</p>
+        </div>
+    </section>
+
     <main>
         <section id="about" class="section">
             <h1>Développeur Web</h1>
             <div class="about-content">
                 <div class="profile-image">
-                    <img src="placeholder-profile.jpg" alt="Photo de profil">
+                    <img src="./assets/photo_de_profil.webp" alt="Photo de profil">
                 </div>
                 <div class="about-text">
                     <h2>À propos de moi</h2>
@@ -69,7 +77,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Mon Portfolio. Tous droits réservés.</p>
+        <p>&copy; 2025 Pierre THOMAS. Tous droits réservés.</p>
     </footer>
 
     <script src="script.js"></script>
