ajout texte et visuel a propos & mise en forme de la section contact

--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
                 </div>
                 <div class="about-text">
                     <h2>À propos de moi</h2>
-                    <p>Hello ! Je m'appelle Pierre Thomas, développeur web passionné par la création d'expériences web innovantes et intuitives. Diplomé de la <a href="https://openclassrooms.com/fr/paths/900-integrateur-web">formation d'intégrateur web</a> d'openclassrooms spécialisé dans le développement front-end, je transforme des idées en solutions digitales performantes.</p>
+                    <p>Hello ! Je m'appelle Pierre Thomas, développeur web passionné par la création d'expériences web innovantes et intuitives. Diplomé de la <a href="https://openclassrooms.com/fr/paths/900-integrateur-web">formation d'intégrateur web</a> d'openclassrooms spécialisé dans le développement front-end, je transforme des idées en solutions digitales performantes.<br>Curieux, rigoureux et toujours en veille, j’aime relever les défis techniques autant que collaborer avec les équipes design et produit pour proposer des solutions concrètes et impactantes.
+                        <br>Mon objectif : concevoir des sites et applications qui allient esthétisme, fluidité et impact utilisateur.</p>
                 </div>
                 <div class="skills">
-                    <h3>Compétences</h3>
+                    <h2>Compétences</h2>
                     <div class="skills-chart">
                         <canvas id="skillsChart"></canvas>
                     </div>
@@ -54,21 +55,38 @@
         
         <section id="contact" class="section">
             <h2>Me Contacter</h2>
-            <form id="contact-form">
-                <div class="form-group">
-                    <label for="name">Nom</label>
-                    <input type="text" id="name" name="name" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="message" required></textarea>
-                </div>
-                <button type="submit">Envoyer</button>
-            </form>
+            <div class="contact-container">
+                <form id="contact-form">
+                    <div class="form-row">
+                        <div class="form-group">
+                            <label for="firstname">Prénom</label>
+                            <input type="text" id="firstname" name="firstname" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="lastname">Nom</label>
+                            <input type="text" id="lastname" name="lastname" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="motif">Motif de la demande</label>
+                        <select id="motif" name="motif" required>
+                            <option value="">Sélectionnez un motif</option>
+                            <option value="maintenance">Maintenance site web</option>
+                            <option value="creation">Création de site web</option>
+                            <option value="autre">Autre demande</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" required></textarea>
+                    </div>
+                    <button type="submit">Envoyer</button>
+                </form>
+            </div>
         </section>
     </main>
     
