Liens réseaux dans le footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio - Pierre THOMAS - Développeur Web</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header>
@@ -91,7 +92,17 @@
     </main>
     
     <footer>
-        <p>&copy; 2025 Pierre THOMAS. Tous droits réservés.</p>
+        <div class="footer-content">
+            <p><strong>&copy; 2025 Pierre THOMAS. Tous droits réservés.</strong></p>
+            <div class="social-links">
+                <a href="https://www.linkedin.com/in/pierre-thomas-9398631b6/" target="_blank" class="social-link">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="https://github.com/Pierretoms" target="_blank" class="social-link">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+        </div>
     </footer>
     
     <script src="script.js"></script>
