Responsive div skills ok version tablette et mobile

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="about-text">
                     <h2>À propos de moi</h2>
-                    <p>Hello ! Je m'appelle Pierre Thomas, développeur web passionné par la création d'expériences web innovantes et intuitives. Fraichement diplomé de la <a href="https://openclassrooms.com/fr/paths/900-integrateur-web" class="link-formation">formation d'intégrateur web</a> d'openclassrooms spécialisé dans le développement front-end, je transforme des idées en solutions digitales performantes.<br>Curieux, rigoureux et toujours en veille, j'aime relever les défis techniques autant que collaborer avec les équipes design et produit pour proposer des solutions concrètes et impactantes.
+                    <p>Hello ! Je m'appelle Pierre Thomas, développeur web passionné par la création d'expériences web innovantes et intuitives. Fraichement diplomé de la <a href="https://openclassrooms.com/fr/paths/900-integrateur-web" class="link-formation">formation d'intégrateur web</a> d'openclassrooms spécialisée dans le développement front-end, je transforme des idées en solutions digitales performantes.<br>Curieux, rigoureux et toujours en veille, j'aime relever les défis techniques autant que collaborer avec les équipes design et produit pour proposer des solutions concrètes et impactantes.
                         <br>Mon objectif : concevoir des sites et applications qui allient esthétisme, fluidité et impact utilisateur.</p>
                         <a href="mailto:pierre.toms13@gmail.com" class="contact-btn">Me Contacter</a>
                     </div>
