Ajout de chaque screen --> projet & modal au clique sur un projet + style css (et responsive)

--- a/index.html
+++ b/index.html
@@ -85,6 +85,27 @@
                 <div class="portfolio-grid">
                 </div>
             </section>
+            <div id="projectModal" class="modal">
+                <div class="modal-content">
+                    <span class="close-modal">&times;</span>
+                    <div class="modal-body">
+                        <h2 id="modalTitle"></h2>
+                        <img id="modalImage" src="" alt="">
+                        <div class="modal-tech-section">
+                            <h3>Technologies utilisées</h3>
+                            <div class="modal-technologies"></div>
+                        </div>
+                        <div class="modal-description">
+                            <h3>Description</h3>
+                            <p id="modalDescription"></p>
+                        </div>
+                        <div class="modal-links">
+                            <a id="codeLink" href="" target="_blank" class="project-link">Voir le code</a>
+                            <a id="siteLink" href="" target="_blank" class="project-link">Voir le site</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         
         <footer>
