fix audit wave contrast et error

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section id="accueil" class="hero">
         <div class="hero-content">
             <h1>Pierre THOMAS</h1>
-            <p>Développeur web</p>
+            <h2>Développeur web</h2>
         </div>
     </section>
     
@@ -89,7 +89,7 @@
                 <div class="modal-content">
                     <span class="close-modal">&times;</span>
                     <div class="modal-body">
-                        <h2 id="modalTitle"></h2>
+                        <h2 id="modalTitle">Titre du projet</h2>
                         <img id="modalImage" src="" alt="">
                         <div class="modal-tech-section">
                             <h3>Technologies utilisées</h3>
@@ -112,13 +112,13 @@
             <div class="footer-content">
                 <p><strong>&copy; 2025 Pierre THOMAS. Tous droits réservés.</strong></p>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/pierre-thomas-9398631b6/" target="_blank" class="social-link">
+                    <a href="https://www.linkedin.com/in/pierre-thomas-9398631b6/" target="_blank" class="social-link" aria-label="mon compte linkedin">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="https://github.com/Pierretoms" target="_blank" class="social-link">
+                    <a href="https://github.com/Pierretoms" target="_blank" class="social-link" aria-label="mon compte github">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="mailto:pierre.toms13@gmail.com" class="social-link">
+                    <a href="mailto:pierre.toms13@gmail.com" class="social-link" aria-label="me contacter par mail">
                         <i class="fas fa-envelope"></i>
                     </a>
                 </div>
